--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.UsedBooks">
+        android:theme="@style/Theme.UsedBooks"
+       >
         <activity
             android:name=".LogicActivity"
-            android:exported="false" />
+            android:exported="false"
+            />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
