--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,9 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
+
+
+
 }
 
 android {
@@ -43,6 +46,9 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'com.google.firebase:firebase-messaging:23.0.3'
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
+
+
 
 
     // Librerie Navigation
