--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.UsedBooks">
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyA9t7HDV5QsQrFZCKthA3fDxnyoSVtu8uU" />
+
         <activity
             android:name=".NuovoAnnuncioActivity"
             android:exported="false" />
@@ -27,7 +35,6 @@
         <activity
             android:name=".main.MainActivity"
             android:exported="false" />
-        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyA9t7HDV5QsQrFZCKthA3fDxnyoSVtu8uU" />
     </application>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET"/>
