--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     dependencies {
         // Add this line
         classpath 'com.google.gms:google-services:4.3.10'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.2"
     }
 }
 
@@ -14,8 +15,6 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
     id 'org.jetbrains.kotlin.jvm' version '1.6.21' apply false
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.21' apply false
-
-
 }
 
 
