--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-
+    repositories {
+        google()
+    }
     dependencies {
-        // Add this line
         classpath 'com.google.gms:google-services:4.3.10'
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.2"
+
+        def nav_version = "2.4.2"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
 
@@ -16,8 +19,6 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.6.21' apply false
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.21' apply false
 }
-
-
 
 task clean(type: Delete) {
     delete rootProject.buildDir
