--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation("androidx.navigation:navigation-dynamic-features-fragment:2.4.2")
     implementation 'com.google.firebase:firebase-firestore-ktx:24.1.1'
     implementation 'androidx.annotation:annotation:1.3.0'
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.0.3'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
