--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UsedBooks">
         <activity
-            android:name=".main.TextChat"
+            android:name=".main.chat.TextChat"
             android:exported="false" />
 
         <meta-data
