--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,14 +43,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'com.google.firebase:firebase-messaging:23.0.3'
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
-
-
-
 
     // Librerie Navigation
     implementation("androidx.navigation:navigation-fragment-ktx:2.4.2")
@@ -65,4 +60,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //Librerie task asynch
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
 }
