cattura immagine con pulsante

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
 
+    //image
+    implementation("io.coil-kt:coil-compose:2.0.0-rc01")
+
     // Librerie Navigation
     implementation("androidx.navigation:navigation-fragment-ktx:2.4.2")
     implementation("androidx.navigation:navigation-ui-ktx:2.4.2")
