--- a/build.gradle
+++ b/build.gradle
@@ -13,11 +13,12 @@ buildscript {
 
 
 plugins {
-    id 'com.android.application' version '7.2.0' apply false
-    id 'com.android.library' version '7.2.0' apply false
+    id 'com.android.application' version '7.2.1' apply false
+    id 'com.android.library' version '7.2.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
     id 'org.jetbrains.kotlin.jvm' version '1.6.21' apply false
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.21' apply false
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin' version '2.0.0' apply false
 }
 
 task clean(type: Delete) {
